--- a/main.css
+++ b/main.css
@@ -23,7 +23,8 @@ a:focus, a:hover {
 	transition-property: background;
 }
 
-body {font-size: 20px; 
+body {font-size: 20px; font-family: Verdana, sans-serif;
+
 }
 
 code {
@@ -50,7 +51,7 @@ header {margin: 1em;
 	
 }
 
-main {;
+main {
 
 
 }
