--- a/main.css
+++ b/main.css
@@ -36,14 +36,14 @@ h1, h2, h3 {margin-bottom: 10px;
 
 }
 
-h1 {
+h1 {font-weight: 900; text-align: center;
 }
 
-h2 {
+h2 {font-weight: 700;
 
 }
 
-h3 {margin-top: 10px;
+h3 {margin-top: 10px;font-weight: 600;
 	
 }
 
